# EDA-estacoesMetereologicaPI

./: .gitignore  01_baixarDados_EMFP_ANA.ipynb  DataScience_serieHistorica.ipynb  EstacoesPI_ANA.ipynb  README.md  Untitled.ipynb  baixarDados.ipynb  baixarDados_INMET.ipynb  pyproject.toml  testes.ipynb
dados/ana/: 02_AnaliseDados.ipynb  EstacoesFluvioPluvio_PiauiOperando.geojson  metadados_estacoes.xml
dados/ibge/: PI_Mesorregioes_2022.dbf  PI_Mesorregioes_2022.shp  PI_Mesorregioes_2022.shx  PI_Microrregioes_2022.dbf  PI_Microrregioes_2022.shp  PI_Microrregioes_2022.shx
